# grilo-plugins

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  grilo-plugins-0.3.pc.in  grilo-plugins.doap  grilo-plugins.spec.in  gtester.mk  meson.build  meson_options.txt  setup-plugins-env.sh
doc/grilo-plugins/: .gitignore  Makefile.am  grilo-plugins-docs.sgml  grilo-plugins.types  overview.xml
help/: LINGUAS  Makefile.am  meson.build
help/C/: grilo-plugins.xml
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/examples/: Makefile.am  example-tmdb.c  meson.build
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/kk/: kk.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  ab.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  ml.po  ms.po  nb.po  (+22 more)
src/: Makefile.am  meson.build
src/apple-trailers/: Makefile.am  apple-trailers.gresource.xml  grl-apple-trailers.c  grl-apple-trailers.h  grl-apple-trailers.xml
src/bliptv/: Makefile.am  bliptv.gresource.xml  grl-bliptv.c  grl-bliptv.xml
src/bookmarks/: Makefile.am  bookmarks-resource.c  bookmarks-resource.h  grl-bookmarks.c  grl-bookmarks.h  grl-bookmarks.xml  meson.build
src/chromaprint/: Makefile.am  grl-chromaprint.c  grl-chromaprint.h  meson.build
src/dleyna/: .gitignore  Makefile.am  com.intel.dLeynaServer.Manager.xml  com.intel.dLeynaServer.MediaDevice.xml  grl-dleyna-server.c  grl-dleyna-server.h  grl-dleyna-servers-manager.c  grl-dleyna-servers-manager.h  grl-dleyna-source.c  grl-dleyna-source.h  grl-dleyna-utils.c  grl-dleyna-utils.h  grl-dleyna.c  grl-dleyna.xml  meson.build  org.gnome.UPnP.MediaServer2.xml
src/dmap/: Makefile.am  grl-common.c  grl-common.h  grl-daap-compat.h  grl-daap-db.c  grl-daap-db.h  grl-daap-record-factory.c  grl-daap-record-factory.h  grl-daap-record.c  grl-daap-record.h  grl-daap.c  grl-daap.h  grl-daap.xml  grl-dmap-compat.h  grl-dmap.c  grl-dmap.h  grl-dmap.xml  grl-dpap-compat.h  grl-dpap-db.c  grl-dpap-db.h  grl-dpap-record-factory.c  grl-dpap-record-factory.h  grl-dpap-record.c  grl-dpap-record.h  grl-dpap.c  grl-dpap.h  grl-dpap.xml  meson.build  simple-daap-record-factory.c  simple-daap-record-factory.h  simple-daap-record.c  simple-daap-record.h  simple-dmap-db.c  simple-dmap-db.h
src/fake-metadata/: Makefile.am  fake-metadata.c  fake-metadata.h  grl-fake-metadata.c  grl-fake-metadata.h
src/filesystem/: Makefile.am  TODO  grl-filesystem.c  grl-filesystem.h  libgrlfilesystem.xml  meson.build  ms-filesystem.c  ms-filesystem.h
src/flickr/: Makefile.am  flickcurl_async.c  flickcurl_async.h  flickr-oauth.c  flickr-oauth.h  gflickr.c  gflickr.h  grl-flickr-auth.c  grl-flickr-auth.h  grl-flickr.c  grl-flickr.h  grl-flickr.xml  meson.build  ms-flickr.c  ms-flickr.h
src/freebox/: Makefile.am  freebox-monitor.c  freebox-monitor.h  freebox.gresource.xml  grl-freebox.c  grl-freebox.h  grl-freebox.xml  meson.build  radios.m3u
src/gravatar/: Makefile.am  grl-gravatar.c  grl-gravatar.xml  libgrlgravatar.xml  meson.build
src/guardian-videos/: Makefile.am  grl-guardianvideos.c  grl-guardianvideos.h  grl-guardianvideos.xml  guardianvideos.gresource.xml
src/jamendo/: Makefile.am  TODO  grl-jamendo.c  grl-jamendo.h  grl-jamendo.xml  meson.build  ms-jamendo.c  ms-jamendo.h
src/lastfm-albumart/: Makefile.am  grl-lastfm-albumart.c  grl-lastfm-albumart.h  ms-lastfm-albumart.c  ms-lastfm-albumart.h
src/local-metadata/: Makefile.am  grl-local-metadata.c  grl-local-metadata.h  grl-local-metadata.xml  meson.build
src/lua-factory/: Makefile.am  grl-lua-common.h  grl-lua-factory.c  grl-lua-factory.gresource.xml  grl-lua-factory.h  grl-lua-factory.xml  grl-lua-library-operations.c  grl-lua-library-operations.h  grl-lua-library.c  grl-lua-library.h  meson.build
src/magnatune/: Makefile.am  grl-magnatune.c  grl-magnatune.h  grl-magnatune.xml  meson.build
src/media/: Makefile.am
src/metadata/: Makefile.am
src/metadata-store/: Makefile.am  grl-metadata-store.c  grl-metadata-store.h  grl-metadata-store.xml  meson.build
src/opensubtitles/: Makefile.am  grl-opensubtitles.c  grl-opensubtitles.h  grl-opensubtitles.xml  meson.build
src/optical-media/: Makefile.am  grl-optical-media.c  grl-optical-media.h  meson.build
src/pocket/: Makefile.am  gnome-pocket.c  gnome-pocket.h  grl-pocket.c  grl-pocket.h  grl-pocket.xml  pocket.gresource.xml
src/podcasts/: Makefile.am  TODO  grl-podcasts.c  grl-podcasts.h  libgrlpodcasts.xml  meson.build  ms-podcasts.c  ms-podcasts.h
src/raitv/: Makefile.am  grl-raitv.c  grl-raitv.h  grl-raitv.xml  meson.build  raitv.gresource.xml
src/shoutcast/: Makefile.am  grl-shoutcast.c  grl-shoutcast.h  grl-shoutcast.xml  meson.build
src/thetvdb/: Makefile.am  grl-thetvdb.c  grl-thetvdb.h  grl-thetvdb.xml  meson.build  thetvdb-resources-episodes.c  thetvdb-resources-fuzzy-names.c  thetvdb-resources-series.c  thetvdb-resources.h
src/tmdb/: Makefile.am  grl-tmdb-request.c  grl-tmdb-request.h  grl-tmdb.c  grl-tmdb.h  grl-tmdb.xml  meson.build
src/tracker/: Makefile.am  grl-tracker-source-api.c  grl-tracker-source-api.h  grl-tracker-source-cache.h  grl-tracker-source-notif.c  grl-tracker-source-notif.h  grl-tracker-source-priv.h  grl-tracker-source.c  grl-tracker.c  (+5 more)
test/: Makefile.am  fake-metadata-source.c  fake-metadata-source.h  fake-source.c  fake-source.h  main.c  mainreg.c  test_local_metadata.c  test_tmdb.c  test_tmdb_fast_resolution.c  test_tmdb_fast_resolution_by_id.c  test_tmdb_full_resolution.c  test_tmdb_missing_configuration.c  test_tmdb_preconditions.c  test_tmdb_utils.c  youtube-source.c  youtube-source.h
tests/: .gitignore  Makefile.am  meson.build
(+366 files in other folders)
